--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "change-case": "^5.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "theme-change": "^2.5.0"
