--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/sort-by": "^1.2.3",
